# recommendation-system

./: .gitignore  README.md  pyproject.toml
notebooks/: preprocessing.ipynb
project_writeup/__MACOSX/project/: ._Project-Introduction.pptx
project_writeup/project/: Project-Introduction.pptx
