[project]
name = "recommendation-system"
version = "0.1.0"
description = "CS 439 Final Project"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "pandas",
    "numpy",
    "scipy",
    # Add other dependencies you need
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "notebooks/*.ipynb",
]